# audiogene-avr

./: .gitignore  CMakeLists.txt  README.md
Debug/: Makefile  Makefile.new  makedep.mk
Debug/src/LUFA/LUFA/Common/: Common.h
Debug/src/LUFA/LUFA/Drivers/Board/: LEDs.h
Debug/src/LUFA/LUFA/Drivers/USB/: USB.h
Debug/src/LUFA/LUFA/Drivers/USB/Core/: Device.h  DeviceStandardReq.h  Endpoint.h  EndpointStream.h  USBController.h  USBMode.h
Debug/src/config/: LUFAConfig.h
inc/: VirtualSerial.h  mcp23017.h  midi.h
inc/LUFA/: CDCClassCommon.h  CDCClassDevice.h  Common.h  Descriptors.h  Device.h  DeviceStandardReq.h  Endpoint.h  EndpointStream_AVR8.h  Endpoint_AVR8.h  LEDs.h  StdRequestType.h  USB.h  USBController.h  USBController_AVR8.h  USBInterrupt.h  USBInterrupt_AVR8.h
inc/LUFA_new/: ArchitectureSpecific.h  CDCClass.h  ConfigDescriptors.h  Device.h  Device_AVR8.h  Endpoint.h  EndpointStream.h  Events.h  LEDs.h  StdDescriptors.h  USBController.h  USBInterrupt.h  USBMode.h  USBTask.h
src/: VirtualSerial.c  i2cmaster.S  mcp23017.c  midi.c  twimaster.c
src/LUFA/: CDCClassDevice.c  ConfigDescriptors.c  Descriptors.c  DeviceStandardReq.c  Device_AVR8.c  EndpointStream_AVR8.c  Endpoint_AVR8.c  Events.c  USBController_AVR8.c  USBInterrupt_AVR8.c  USBTask.c
